# confia

./: .env.example  .gitignore  Pipfile  README.md  docker-compose.yaml  ics.py  main.py  pyproject.toml  settings.py
dao/: aggregation_pipelines.py  dao.py
entities/: news.py  news_metadata.py  tweet.py  user.py
scripts/: get_distinct_news.py  get_news.py  utils.py
