[tool.poetry]
name = "confia"
version = "0.1.0"
description = ""
authors = ["Gustavo Plenamente <gustavoplenamente@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"
pymongo = "^3.11.3"
python-dotenv = "^0.17.1"
mongoengine = "^0.23.0"
scikit-learn = "^0.24.2"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
